Include snackableTags into episode api endpoints
